menu text-align:left fix

--- a/src/styles/menu.styl
+++ b/src/styles/menu.styl
@@ -1,5 +1,6 @@
 .menu-button
     simpleButton(my-black, my-white)
+    text-align left
 
 .side-menu
     position fixed
